--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ author :
 #
 production_url : http://username.github.io
 
+markdown: kramdown
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
