--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : ryanselk
+      short_name : rselk
     livefyre :
       site_id : 123
     intensedebate :
