change email address

--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,8 @@ title : Ryan Selk
 tagline: None
 author :
   name : Ryan Selk
-  email : ryanselk@gmail.com
-  github : username
-  twitter : username
-  feedburner : feedname
+  email : me@ryanselk.com
+  github : rselk
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
